--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dev_dependencies:
     sdk: flutter
   provider: ^6.0.2
   intl: ^0.17.0
+  http: ^0.13.4
 
 
   # The "flutter_lints" package below contains a set of recommended lints to
