--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dev_dependencies:
   provider: ^6.0.2
   intl: ^0.17.0
   http: ^0.13.4
+  shared_preferences: ^2.0.15
 
 
   # The "flutter_lints" package below contains a set of recommended lints to
